--- a/ElectroPermanentMagneticClamp.html
+++ b/ElectroPermanentMagneticClamp.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Electro-Permanent Magnet Clamp</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
     <style>
+        /* Global Styles */
         body {
             font-family: 'Arial', sans-serif;
             background-color: #f0f8ff; /* Light Blue Background */
@@ -14,50 +16,123 @@
             line-height: 1.6; /* Improve Line Spacing */
         }
 
+        /* Container Style */
         .container {
-            width: 80%; /* Responsive Width */
-            max-width: 900px; /* Maximum Width */
-            margin: 20px auto; /* Center the Content */
+            width: 90%;
+            max-width: 900px;
+            margin: 20px auto;
             padding: 30px;
-            background-color: #fff; /* White Card Background */
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Subtle Shadow */
+            background-color: #fff;
+            border-radius: 12px;
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
         }
 
+        /* Header Styles */
         h1 {
-            color: #333;
+            font-family: 'Montserrat', sans-serif;
+            color: #0e253c; /* Dark Blue */
             text-align: center;
             margin-bottom: 20px;
+            font-size: 2em;
         }
 
+        /* Paragraph Styles */
         p {
             margin-bottom: 15px;
+            font-size: 1.1em;
+            text-align: left;
         }
 
+        /* Anchor (Links) Styles */
         a {
-            color: #007bff; /* Bootstrap Blue */
+            color: #007bff;
             text-decoration: none;
+            font-weight: bold;
         }
 
         a:hover {
             text-decoration: underline;
         }
 
-        .tech-used {
-            font-style: italic;
-            color: #777;
+        /* Card Styles */
+        .card {
+            background-color: #fff;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            padding: 15px;
+            margin: 15px 0;
+        }
+
+        .card-title {
+            font-size: 1.3em;
+            color: #0e253c;
+            margin-bottom: 10px;
+        }
+
+        .card-content {
+            font-size: 1em;
+            color: #555;
+            line-height: 1.6;
+            text-align: left;
+        }
+
+        /* Responsive Design for Smaller Screens */
+        @media (max-width: 768px) {
+            .container {
+                width: 95%;
+                padding: 20px;
+            }
+
+            h1 {
+                font-size: 1.6em;
+                margin-bottom: 15px;
+            }
+
+            p, .card-content {
+                font-size: 1em;
+            }
+
+            a {
+                font-size: 1em;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .container {
+                padding: 15px;
+            }
+
+            h1 {
+                font-size: 1.4em;
+            }
+
+            p, .card-content {
+                font-size: 0.9em;
+            }
+
+            a {
+                font-size: 0.9em;
+            }
         }
     </style>
 </head>
 <body>
+
     <div class="container">
-        <h1>Two Pole Electro-Permanent Magnet Clamp for Workpiece holding during machining</h1>
-        <p>This project optimized a two-pole electro-permanent magnetic clamping system designed to replace
-            traditional clamps in machining operations during machining processes. Iterative design and analysis using
-            Magnetic Circuit Analysis (MCA), Finite Element Method Magnetics (FEMM), and ANSYS software ensured the
-            achievement of performance goals.</p>
-        <p class="tech-used">Technologies Used: MATLAB, OpenCV, GStreamer, ROS, Kinova Gen 3 Robot, Data-Driven Controllers</p>
         <p><a href="portfolio.html">Back to Home</a></p>
+        <h1>Two Pole Electro-Permanent Magnet Clamp for Workpiece Holding During Machining</h1>
+        <p>This project optimized a two-pole electro-permanent magnetic clamping system designed to replace traditional clamps in machining operations. Iterative design and analysis using Magnetic Circuit Analysis (MCA), Finite Element Method Magnetics (FEMM), and ANSYS software ensured the achievement of performance goals.</p>
+
+        <!-- Card for Technologies Used -->
+        <div class="card">
+            <div class="card-title">Technologies Used:</div>
+            <div class="card-content">
+                MATLAB, OpenCV, GStreamer, ROS, Kinova Gen 3 Robot, Data-Driven Controllers
+            </div>
+        </div>
+
+       
     </div>
+
 </body>
 </html>
