--- a/ControllerSimulation.html
+++ b/ControllerSimulation.html
@@ -176,13 +176,11 @@
             <li>Adaptive Control</li>
             <li>Robust Control</li>
         </ul>
-        <p>It involves deriving the governing equations and representing them using the notations introduced in the
-            BME 590 course, with a detailed analysis of each control technique, evaluating its stability and tracking
-            accuracy.</p>
+
 
         <!-- Card for Technologies Used -->
         <div class="card">
-            <div class="card-title">Technologies Used:</div>
+            <div class="card-title">Software Used:</div>
             <div class="card-content">
                 MATLAB, Simulink
             </div>
