--- a/SmartSortingLine.html
+++ b/SmartSortingLine.html
@@ -178,7 +178,7 @@
         
         <!-- Card for Technologies Used -->
         <div class="card">
-            <div class="card-title">Technologies Used:</div>
+            <div class="card-title">Software Used:</div>
             <div class="card-content">
                 HTML, Connected Components Workbench, Python, VS Code, Factory I/O, Datagrip, PostgreSQL, Render, Allen-Bradley Micro 800, GitHub
             </div>
