--- a/EDO.html
+++ b/EDO.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Visual Servo Control</title>
+    <title>Optimization of Discrete Choice Models and Multi-Spring Systems</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
     <style>
         /* Global Styles */
@@ -13,7 +13,7 @@
             color: #333; /* Dark Text for Readability */
             margin: 0;
             padding: 0;
-            line-height: 1.6; /* Improve Line Spacing */
+            line-height: 1.6;
         }
 
         /* Container Style */
@@ -40,7 +40,7 @@
         p {
             margin-bottom: 15px;
             font-size: 1.1em;
-            text-align: left;
+            text-align: left; /* Align text to the left */
         }
 
         /* Anchor (Links) Styles */
@@ -59,8 +59,8 @@
             background-color: #fff;
             border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            padding: 15px;
-            margin: 15px 0;
+            padding: 15px; /* Reduced padding */
+            margin: 15px 0; /* Reduced margin */
         }
 
         .card-title {
@@ -70,10 +70,17 @@
         }
 
         .card-content {
-            font-size: 1em;
+            font-size: 1em; /* Reduced font size */
             color: #555;
             line-height: 1.6;
             text-align: left;
+        }
+
+        /* List Styling */
+        ul {
+            margin: 10px 0;
+            padding-left: 20px;
+            font-size: 1.1em;
         }
 
         /* Image Styling */
@@ -95,13 +102,6 @@
 
         .image-container img:hover {
             transform: scale(1.05);
-        }
-
-        /* List Styling */
-        ul {
-            margin: 10px 0;
-            padding-left: 20px;
-            font-size: 1.1em;
         }
 
         /* Responsive Design for Smaller Screens */
@@ -167,28 +167,40 @@
 
     <div class="container">
         <p><a href="portfolio.html">Back to Home</a></p>
-        <h1>Visual Servo Control of a 7-Link Kinova Gen3 Robot Arm</h1>
-        <p>My role involves developing a closed-loop control system to track a micro swimmer using an ultrasound probe and a 7-link Kinova Gen3 robot arm, as it navigates a viscous medium under vibration forces.</p>
+        <h1>Equilibrium Analysis and Optimization of a Three-Cart System with Springs and Applied Load</h1>
+        <p>The three carts are interconnected by springs, and each cart is subjected to an individual applied load at their respective locations.
+            This project focused on Minimizing Potential Energy for N+1 Spring Configurations in Engineering Design using algorithms:</p>
+        <ul>
+            <li>MATLAB Optimization Toolbox (fminunc)</li>
+            <li>Steepest Descent </li>
+            <li>Fletcher-Reeves</li>
+            <li>BFGS (Broyden-Fletcher-Goldfarb-Shanno)</li>
+        </ul>
+        <p>We compared the performance of each algorithm in terms of solution quality (final objective function value) and computational cost (number of function evaluations), and examined how gradient estimation techniques (forward vs. central difference) affected optimization accuracy, along with understanding the effect of step size variations in bounding phase and gradient estimation</p>
         
-        <!-- Card for Technologies Used -->
-        <div class="card">
-            <div class="card-title">Software Used:</div>
-            <div class="card-content">
-                MATLAB, OpenCV, GStreamer, ROS, Kinova Gen 3 Robot, Data-Driven Controllers
-            </div>
-        </div>
 
         <!-- Card for Concepts Learned -->
         <div class="card">
             <div class="card-title">Concepts Learned:</div>
             <div class="card-content">
-                Camera Calibration, Joint Space and Task Space Control, Trajectory Planning, Inverse Kinematics, Object Detection
+                Optimization Techniques: Gradient-based Methods, Quasi-Newton Methods,Line Search Methods, Convergence Criteria ; Objective Function Evaluation; Gradient Estimation Techniques:Finite Difference Approximations,Normalizing the Search Vector;Computational Efficiency:
+
+                trade-off between solution accuracy and computational cost, Sensitivity Analysis, Polynomial metamodeling
             </div>
         </div>
 
+        <!-- Card for Software Used -->
+        <div class="card">
+            <div class="card-title">Software Used:</div>
+            <div class="card-content">
+                MATLAB
+            </div>
+        </div>
+                
         <!-- Image Gallery -->
         <div class="image-container">
-            <img src="VisualServoControl/Pic.png" alt="Visual Servo Control">
+            <img src="EDO_Algorithms.png" alt="convergence Analysis">
+            <img src="EDO_BFGS_Graph.png" alt="convergence Analysis">
         </div>
     </div>
 
