--- a/portfolio.html
+++ b/portfolio.html
@@ -383,6 +383,7 @@
         </header>
 
         <!-- About Me Section -->
+        <div class="container">
         <section class="section" style="margin-top: 0;">
             <h3 class="about-me-text">About Me</h3>
             <div class="typing-container">
@@ -393,6 +394,7 @@
                 <p class="typing-line">and process engineering.</p>
             </div>
         </section>
+        </div>
 
         <!-- 2-Column Grid Layout -->
         <div class="grid-container">
