--- a/portfolio.html
+++ b/portfolio.html
@@ -387,11 +387,11 @@
         <section class="section" style="margin-top: 0;">
             <h3 class="about-me-text">About Me</h3>
             <div class="typing-container">
-                <p class="typing-line">Master's student in Mechanical Engineering, focusing on dynamics and control systems.</p>
-                <p class="typing-line">I am proficient in hardware integration, PLC programming, robot path planning, stability analysis,</p>
-                <p class="typing-line">and dynamic system modeling.</p>
-                <p class="typing-line">My experience at Tioga Cardiovascular and Eaton has honed my skills in automation, design,</p>
-                <p class="typing-line">and process engineering.</p>
+                <p class="typing-line">Master's student in Mechanical Engineering, focusing on dynamics and control systems.
+                I am proficient in hardware integration, PLC programming, robot path planning, stability analysis,
+                and dynamic system modeling.
+                My experience at Tioga Cardiovascular and Eaton has honed my skills in automation, design,
+             and process engineering.</p>
             </div>
         </section>
         </div>
