--- a/portfolio.html
+++ b/portfolio.html
@@ -390,7 +390,7 @@
                 <p class="typing-line">Master's student in Mechanical Engineering, focusing on dynamics and control systems.
                 I am proficient in hardware integration, PLC programming, robot path planning, stability analysis,
                 and dynamic system modeling.
-                My experience at Tioga Cardiovascular and Eaton has honed my skills in automation, design,
+                <p class="typing-line">My experience at Tioga Cardiovascular and Eaton has honed my skills in automation, design,
              and process engineering.</p>
             </div>
         </section>
@@ -405,7 +405,7 @@
                     <!-- Research Assistant -->
                     <div class="dropdown">
                         <button>Research Assistant</button>
-                        <p class="date-location">Jan 2025 - August 2025 | Raleigh, NC</p>
+                        <p class="date-location">Jan 2025 - May 2025 | Norht Carolina State University, Raleigh, NC</p>
                         <div class="dropdown-content">
                             <ul>
                                 <li>Research Assistant at the Neuromuscular Control and Robotics Lab, working on enhancing exoskeleton mobility.</li>
@@ -417,7 +417,7 @@
                     <!-- Process Development Intern -->
                     <div class="dropdown">
                         <button>Process Development Intern</button>
-                        <p class="date-location">June 2023 - August 2023 | Raleigh, NC</p>
+                        <p class="date-location">May 2024 - August 2024 | Tioga Cardiovascular, Los Gatos, California</p>
                         <div class="dropdown-content">
                             <ul>
                                 <li>Optimized the manufacturing process of the Transcatheter Mitral Valve replacement product.</li>
@@ -430,7 +430,7 @@
                     <!-- Associate Engineer -->
                     <div class="dropdown">
                         <button>Associate Engineer</button>
-                        <p class="date-location">July 2021 - June 2023 | Charlotte, NC</p>
+                        <p class="date-location">August 2021 - June 2023 | Eaton, Pune, India</p>
                         <div class="dropdown-content">
                             <ul>
                                 <li>Worked in the Regulators Department, Medium Voltage Power Distribution.</li>
@@ -445,7 +445,7 @@
                     <!-- Research Co-Op -->
                     <div class="dropdown">
                         <button>Research Co-Op</button>
-                        <p class="date-location">January 2021 - May 2021 | Raleigh, NC</p>
+                        <p class="date-location">January 2021 - May 2021 | Bamboochi Bicycles, Pune, India</p>
                         <div class="dropdown-content">
                             <ul>
                                 <li>Employed SOLIDWORKS for frame modeling; ANSYS Mechanical, and Fusion 360 for structural analysis of the bamboo frame.</li>
