--- a/portfolio.html
+++ b/portfolio.html
@@ -405,7 +405,7 @@
                     <!-- Research Assistant -->
                     <div class="dropdown">
                         <button>Research Assistant</button>
-                        <p class="date-location">Jan 2025 - May 2025 | Norht Carolina State University, Raleigh, NC</p>
+                        <p class="date-location">Jan 2025 - May 2025 | North Carolina State University, Raleigh, NC</p>
                         <div class="dropdown-content">
                             <ul>
                                 <li>Research Assistant at the Neuromuscular Control and Robotics Lab, working on enhancing exoskeleton mobility.</li>
