--- a/portfolio.html
+++ b/portfolio.html
@@ -414,6 +414,7 @@
         left: 10px; /* Move to the left slightly */
         top: 10px; /* Position the navigation at the top */
         transform: none; /* Remove vertical centering */
+        position: relative;
     }
 
     /* Change the layout to horizontal for mobile */
