--- a/portfolio.html
+++ b/portfolio.html
@@ -376,7 +376,7 @@
   /* Minimalist Vertical Index Navigation */
 .index-navigation {
     position: fixed;
-    left: 20px;
+    left: 5px;
     top: 50%;
     transform: translateY(-50%);
     background: none;
@@ -407,34 +407,7 @@
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3); /* Shadow effect */
 }
 
-/* Mobile-Friendly Adjustments */
-@media screen and (max-width: 767px) {
-    /* Adjust positioning for smaller screens */
-    .index-navigation {
-        left: 10px; /* Move to the left slightly */
-        top: 10px; /* Position the navigation at the top */
-        transform: none; /* Remove vertical centering */
-        position: relative;
-    }
 
-    /* Change the layout to horizontal for mobile */
-    .index-nav-container {
-        display: flex;
-        flex-direction: row; /* Change layout to horizontal */
-        justify-content: center; /* Center the links horizontally */
-        gap: 15px; /* Add space between links */
-    }
-
-    .index-nav-link {
-        font-size: 0.9em; /* Slightly smaller font size for mobile */
-        writing-mode: initial; /* Reset writing mode to horizontal */
-        transform: rotate(0deg); /* Remove rotation */
-    }
-
-    .index-nav-link:hover {
-        color: #2980b9;
-    }
-}
 
         /* Software Skills Section */
         .software-skills {
@@ -499,7 +472,9 @@
                  <!-- Minimal Software Skills Section -->
                  <section id="skills" class="section">
                     <div class="software-skills"> Skills : 
-                        Python • MATLAB • ROS • OpenCV • SolidWorks • ANSYS • PLC • HTML/CSS • SQL
+                        SOLIDWORKS • AutoCAD • Autodesk Fusion 360 • Autodesk Inventor • ANSYS Mechanical • OpenSim • SAP • MATLAB • Simulink •
+                        Wolfram Mathematica • Python • Excel Visual Basics • Power Apps • Latex • PreForm • Connected Components Workbench
+                     
                     </div>
                 </section>
 
