--- a/portfolio.html
+++ b/portfolio.html
@@ -117,6 +117,8 @@
             margin-bottom: 10px;
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
             text-align: center;
+            margin-left:10px;
+            margin-right:10px;
         }
 
         .card h3 {
